--- a/index.html
+++ b/index.html
@@ -3,97 +3,202 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Medicijn Voorraad</title>
+<title>Medicijn Voorraad App</title>
+
 <style>
-body { font-family: Arial; padding: 20px; background: #f5f5f5; }
-.app { max-width: 500px; margin: auto; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);}
-label { font-weight: bold; display:block; margin-top:10px; }
-input, select { width: 100%; padding: 8px; margin-top:5px; }
-button { padding: 10px; width: 100%; font-size: 16px; margin-top:10px; border: none; border-radius: 10px; background: #007bff; color: white; cursor:pointer; }
-#voorraadlijst { margin-top: 20px; font-size: 16px; }
+body { font-family: Arial; margin:0; padding:0; background:#f5f5f5; }
+
+header {
+    background:#007bff;
+    color:white;
+    padding:15px;
+    text-align:center;
+    font-size:22px;
+}
+
+.tab-buttons {
+    display:flex;
+    background:white;
+}
+
+.tab-buttons button {
+    flex:1;
+    padding:15px;
+    border:none;
+    background:#e0e0e0;
+    font-size:16px;
+    cursor:pointer;
+}
+
+.tab-buttons button.active {
+    background:white;
+    border-bottom:3px solid #007bff;
+    font-weight:bold;
+}
+
+.page {
+    display:none;
+    padding:20px;
+}
+
+.page.active {
+    display:block;
+}
+
+input, select, button {
+    width:100%;
+    padding:10px;
+    margin-top:10px;
+    font-size:16px;
+}
+
+button.action {
+    background:#007bff;
+    color:white;
+    border:none;
+    border-radius:8px;
+}
+
+.box {
+    background:white;
+    padding:15px;
+    border-radius:10px;
+    margin-top:15px;
+}
+
+li { margin-bottom:8px; }
 </style>
 </head>
+
 <body>
 
-<div class="app">
-<h2>💊 Medicijn Voorraad</h2>
+<header>💊 Medicijn Voorraad</header>
 
-<label>Naam van medicijn:</label>
-<input type="text" id="medicijn_naam" placeholder="Bijv. Paracetamol">
-
-<label>Type:</label>
-<select id="medicijn_type">
-  <option value="tabletten">tabletten</option>
-  <option value="pillen">pillen</option>
-  <option value="poeder">poeder</option>
-  <option value="spuiten">spuiten</option>
-  <option value="volume">volume</option>
-</select>
-
-<label>Aantal / volume:</label>
-<input type="number" id="medicijn_aantal" placeholder="Aantal of volume">
-
-<button onclick="voegMedicijnToe()">Voeg medicijn toe</button>
-<button onclick="gebruikMedicijn()">Gebruik medicijn</button>
-<button onclick="toonVoorraad()">Toon voorraad</button>
-
-<div id="voorraadlijst"></div>
+<div class="tab-buttons">
+    <button id="tab1" class="active" onclick="openTab('invoer')">Invoeren</button>
+    <button id="tab2" onclick="openTab('voorraad')">Voorraad</button>
 </div>
 
-<script>
-let voorraad = {}; // Voorraad dictionary
+<!-- TAB 1: INVOER / GEBRUIK -->
+<div id="invoer" class="page active">
 
+    <div class="box">
+        <label>Naam van medicijn:</label>
+        <input type="text" id="medicijnNaam">
+
+        <label>Type:</label>
+        <select id="medicijnType">
+            <option value="tabletten">tabletten</option>
+            <option value="pillen">pillen</option>
+            <option value="poeder">poeder</option>
+            <option value="spuiten">spuiten</option>
+            <option value="volume">volume</option>
+        </select>
+
+        <label>Aantal / Volume:</label>
+        <input type="number" id="medicijnAantal">
+
+        <button class="action" onclick="voegMedicijnToe()">Voeg toe</button>
+        <button class="action" onclick="gebruikMedicijn()">Gebruik</button>
+    </div>
+</div>
+
+<!-- TAB 2: VOORRAAD -->
+<div id="voorraad" class="page">
+    <div class="box">
+        <h3>📋 Voorraad</h3>
+        <div id="voorraadLijst">Nog geen gegevens…</div>
+    </div>
+</div>
+
+
+<script>
+// ------------------------
+// TAB NAVIGATIE
+// ------------------------
+function openTab(tab) {
+    document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
+    document.querySelectorAll('.tab-buttons button').forEach(b => b.classList.remove('active'));
+
+    document.getElementById(tab).classList.add('active');
+    document.getElementById("tab" + (tab === 'invoer' ? "1" : "2")).classList.add('active');
+
+    if (tab === "voorraad") toonVoorraad();
+}
+
+// Voorraad opslaan in localStorage
+let voorraad = JSON.parse(localStorage.getItem("voorraadMedicijnen")) || {};
+
+function save() {
+    localStorage.setItem("voorraadMedicijnen", JSON.stringify(voorraad));
+}
+
+// ------------------------
+// MEDICIJN TOEVOEGEN
+// ------------------------
 function voegMedicijnToe() {
-    let naam = document.getElementById("medicijn_naam").value.trim();
-    let type = document.getElementById("medicijn_type").value;
-    let aantal = parseFloat(document.getElementById("medicijn_aantal").value);
+    let naam = document.getElementById("medicijnNaam").value.trim();
+    let type = document.getElementById("medicijnType").value;
+    let aantal = parseFloat(document.getElementById("medicijnAantal").value);
 
     if (!naam || isNaN(aantal) || aantal <= 0) {
-        alert("Vul een geldige naam en aantal in!");
+        alert("Vul een correcte naam + aantal in.");
         return;
     }
 
     if (voorraad[naam]) {
         voorraad[naam].aantal += aantal;
     } else {
-        voorraad[naam] = {aantal: aantal, type: type};
+        voorraad[naam] = { aantal: aantal, type: type };
     }
-    alert(`${aantal} ${type} toegevoegd aan ${naam}. Huidige voorraad: ${voorraad[naam].aantal}`);
+
+    save();
+    alert("Toegevoegd!");
     toonVoorraad();
 }
 
+// ------------------------
+// MEDICIJN GEBRUIKEN
+// ------------------------
 function gebruikMedicijn() {
-    let naam = document.getElementById("medicijn_naam").value.trim();
+    let naam = document.getElementById("medicijnNaam").value.trim();
+    let aantal = parseFloat(document.getElementById("medicijnAantal").value);
+
     if (!voorraad[naam]) {
-        alert(`${naam} bestaat niet in de voorraad.`);
+        alert("Dit medicijn bestaat niet.");
         return;
     }
-    let aantal = parseFloat(document.getElementById("medicijn_aantal").value);
+
     if (isNaN(aantal) || aantal <= 0) {
-        alert("Vul een geldig aantal in.");
+        alert("Ongeldig aantal.");
         return;
     }
-    if (voorraad[naam].aantal >= aantal) {
-        voorraad[naam].aantal -= aantal;
-        alert(`${aantal} ${voorraad[naam].type} gebruikt van ${naam}. Huidige voorraad: ${voorraad[naam].aantal}`);
-    } else {
-        alert(`Niet genoeg ${naam} in voorraad! Huidige voorraad: ${voorraad[naam].aantal}`);
+
+    if (voorraad[naam].aantal < aantal) {
+        alert("Niet genoeg voorraad!");
+        return;
     }
+
+    voorraad[naam].aantal -= aantal;
+    save();
+
+    alert("Gebruikt!");
     toonVoorraad();
 }
 
+// ------------------------
+// VOORRAAD TONEN
+// ------------------------
 function toonVoorraad() {
-    let lijst = "<h3>📋 Huidige voorraad:</h3>";
-    if (Object.keys(voorraad).length === 0) {
-        lijst += "<p>De voorraad is leeg.</p>";
-    } else {
-        lijst += "<ul>";
-        for (let medicijn in voorraad) {
-            lijst += `<li>${medicijn}: ${voorraad[medicijn].aantal} ${voorraad[medicijn].type}</li>`;
-        }
-        lijst += "</ul>";
+    let div = document.getElementById("voorraadLijst");
+    let html = "<ul>";
+
+    for (let naam in voorraad) {
+        html += `<li><strong>${naam}</strong>: ${voorraad[naam].aantal} ${voorraad[naam].type}</li>`;
     }
-    document.getElementById("voorraadlijst").innerHTML = lijst;
+
+    html += "</ul>";
+    div.innerHTML = html;
 }
 </script>
 
